<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="422dp"
        android:layout_height="1288dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <!-- Description TextView positioned below the ImageView -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="900dp"
            android:padding="16dp">


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:gravity="center_vertical"
                android:orientation="horizontal">


                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/camera_selection_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    app:singleSelection="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_back_camera"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/back"
                        app:iconGravity="textStart"
                        app:iconPadding="8dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_front_camera"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/front"
                        app:iconGravity="textStart"
                        app:iconPadding="8dp" />

                </com.google.android.material.button.MaterialButtonToggleGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="?android:attr/listDivider" />

            <!-- Add divider for new section -->


            <!-- Title and Description in a vertical LinearLayout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <Spinner
                    android:id="@+id/quality_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/location_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/location_data"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="16sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/location_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/include_location_data_in_watermark_nrequires_gps_enabled_n_default_disabled"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="?android:attr/textColorSecondary" />
            </LinearLayout>

            <!-- Switch positioned on the right -->
            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/location_toggle_group"
                android:layout_width="0dp"
                android:layout_height="0dp" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>



