<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:titleCentered="true"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivAppTitle"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/menu_icon_unknown"
            app:layout_constraintBottom_toBottomOf="@id/topAppBar"
            app:layout_constraintEnd_toEndOf="@id/topAppBar"
            app:layout_constraintStart_toStartOf="@id/topAppBar"
            app:layout_constraintTop_toTopOf="@id/topAppBar" />
    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:id="@+id/layoutCards"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardStorage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:strokeColor="#4CAF50"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="0px"
                android:orientation="vertical"
                android:padding="6dp">



                <TextView
                    android:id="@+id/tvStorageInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="-70dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/storage_0_gb_0_gb" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardTips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#B39C02"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:strokeColor="#4CAF50"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="0px"
                    android:orientation="vertical"
                    android:padding="6dp">


                    <TextView
                        android:id="@+id/tvTip"
                        android:layout_width="0px"
                        android:layout_height="0px"
                        android:layout_gravity="center"
                        android:layout_marginTop="0dp"
                        android:ellipsize="end"
                        android:textColor="@color/white"
                        android:text="@string/recording_tip"
                        android:textAlignment="center" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="#1C9A55"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:strokeColor="#4CAF50"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="0px"
                    android:orientation="horizontal"
                    android:padding="5dp">



                    <TextView
                        android:id="@+id/tvStats"
                        android:layout_width="0px"
                        android:layout_height="0px"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/stats" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardClock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="#009688"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:strokeColor="#4CAF50"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="0px"
                    android:orientation="horizontal"
                    android:padding="5dp">




                    <TextView
                        android:id="@+id/tvClock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="top"
                        android:textColor="#FFFFFF" />




                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPreview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/layoutControls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutCards"
        app:strokeColor="#4CAF50"
        app:strokeWidth="15dp">

        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="1dp">

            <TextureView
                android:id="@+id/textureView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvPreviewPlaceholder"
                android:layout_width="0px"
                android:layout_height="0px"
                android:layout_gravity="center"
                android:text="@string/preview_area"
                android:textColor="@color/material_on_surface_stroke"
                android:textSize="24sp" />

        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layoutControls"
        style="?android:attr/buttonBarStyle"
        android:layout_width="399dp"
        android:background="@android:color/holo_red_light"
        android:layout_height="250dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonStartStop"
            app:rippleColor="@android:color/transparent"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"

            tools:ignore="SpeakableTextPresentCheck,VisualLintButtonSize" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
